优化ResultSetHelper简化列名数组初始化逻辑，新增列名索引映射缓存，优化大小写不敏感的列名查找性能等